--- a/views/home/index.templ
+++ b/views/home/index.templ
@@ -7,5 +7,11 @@ import (
 templ Index() {
 	@layouts.Base() {
 		<div class="flex flex-col items-center"></div>
+		<button
+			hx-post="/new_game"
+			hx-trigger="click"
+		>
+			New Game!
+		</button>
 	}
 }
