--- a/views/game/game.templ
+++ b/views/game/game.templ
@@ -6,21 +6,30 @@ import (
 	"github.com/garrettladley/the_name_game/views/layouts"
 )
 
-templ Game(gameID domain.ID, playerID domain.ID) {
-	@layouts.Base() {
-		<script src="https://unpkg.com/htmx.org@1.9.12/dist/ext/ws.js"></script>
+templ Index(gameID domain.ID, playerID domain.ID, isHost bool) {
+	@layouts.Base(false) {
 		<div class="flex flex-col items-center">
-			<div hx-ext="ws" ws-connect={ fmt.Sprintf("/ws/%s/%s", gameID, playerID) }>
-				<div id="notifications" hx-swap-oob="beforeend">
-					New message received
-				</div>
-				<div id="chat_room"></div>
-				<form id="form" ws-send>
-					<input name="chat_message"/>
+			<div
+				hx-ext="ws"
+				ws-connect={ fmt.Sprintf("/ws/%s/%s", gameID, playerID) }
+			>
+				<form
+					ws-send
+					hx-get={ fmt.Sprintf("/game/%s/%s/end", gameID, playerID) }
+					hx-swap="outerHTML"
+				>
+					<input name="text" type="text" class="border-2 border-gray-300 p-2" placeholder="Enter a name"/>
+					<button id="submitNameButton" type="submit" class="bg-blue-500 text-white px-4 py-2">Submit</button>
+					if isHost {
+						<button id="endGameButton" type="submit" class="bg-red-500 text-white px-4 py-2 mt-4">End Game</button>
+						<script>
+						document.addEventListener('htmx:send', function (event) {
+							console.log(event.detail);
+						});
+						</script>
+					}
 				</form>
 			</div>
-			{ gameID.String() }
-			{ playerID.String() }
 		</div>
 	}
 }
