--- a/views/home/index.templ
+++ b/views/home/index.templ
@@ -5,16 +5,14 @@ import (
 )
 
 templ Index() {
-	@layouts.Base() {
+	@layouts.Base(true) {
 		<div class="flex flex-col items-center"></div>
 		<button
 			hx-post="/new_game"
 			hx-trigger="click"
+			hx-swap="outerHTML"
 		>
 			New Game!
 		</button>
-		<p class="text-red-300">
-			this is a test
-		</p>
 	}
 }
