--- a/views/game/post.templ
+++ b/views/game/post.templ
@@ -4,7 +4,7 @@ package game
 import "github.com/garrettladley/the_name_game/views/layouts"
 
 templ Post() {
-	@layouts.Base(false) {
+	@layouts.Base() {
 		<p>hey btw the game is over</p>
 	}
 }
