--- a/views/home/index.templ
+++ b/views/home/index.templ
@@ -5,14 +5,32 @@ import (
 )
 
 templ Index() {
-	@layouts.Base(true) {
-		<div class="flex flex-col items-center"></div>
-		<button
-			hx-post="/new_game"
-			hx-push-url="true"
-			hx-swap="outerHTML"
+	@layouts.Base() {
+		<div
+			id="home"
+			class="w-full max-w-screen-xl mx-auto text-center py-12"
 		>
-			New Game!
-		</button>
+			<h1
+				class="text-4xl font-bold mb-4"
+			>
+				Welcome to The Name Game
+			</h1>
+			<a
+				hx-post="/new_game"
+				hx-swap="outerHTML"
+				hx-target="#home"
+				class="btn btn-primary"
+			>
+				New Game
+			</a>
+			<a
+				hx-get="/join"
+				hx-swap="outerHTML"
+				hx-target="#home"
+				class="btn btn-primary"
+			>
+				Join Game
+			</a>
+		</div>
 	}
 }
