--- a/views/game/game.templ
+++ b/views/game/game.templ
@@ -70,6 +70,7 @@ templ Index(gameID domain.ID, isHost bool) {
 		<div class="flex justify-center mt-4">
 			<div class="max-w-md w-full bg-base-300 py-12 px-8 rounded-xl">
 				<h1 class="text-center text-xl font-black mb-10">Submit a name to The Name Game</h1>
+				<h2 class="text-center text-lg font-black mb-4">Game Code: { gameID.String() }</h2>
 				@SubmitForm(gameID, isHost, SubmitParams{}, SubmitErrors{})
 			</div>
 		</div>
