--- a/views/layouts/base.templ
+++ b/views/layouts/base.templ
@@ -7,12 +7,20 @@ templ Base() {
 	<html lang="en" data-theme="dark">
 		<head>
 			<title>The Name Game</title>
-			<link rel="icon" type="image/x-icon" href="/public/favicon.ico"/>
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<link rel="stylesheet" href="/public/styles.css"/>
 			<script src="/htmx/htmx.min.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"></script>
+			<link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png"/>
+			<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"/>
+			<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"/>
+			<link rel="manifest" href="/site.webmanifest"/>
+			<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"/>
+			<meta name="apple-mobile-web-app-title" content="The Name Game"/>
+			<meta name="application-name" content="The Name Game"/>
+			<meta name="msapplication-TileColor" content="#da532c"/>
+			<meta name="theme-color" content="#ffffff"/>
 		</head>
 		<body class="antialiased">
 			{ children... }
