--- a/views/game/game.templ
+++ b/views/game/game.templ
@@ -19,7 +19,7 @@ templ SubmitForm(gameID domain.ID, params SubmitParams, errors SubmitErrors) {
 		<form
 			hx-post={ fmt.Sprintf("/game/%s/submit", gameID) }
 			hx-swap="outerHTML"
-			hx-push-url="true"
+			hx-push-url="/"
 			class="space-y-4"
 		>
 			<div class="w-full">
@@ -56,6 +56,7 @@ templ SubmitSuccess(gameID domain.ID) {
 		hx-post={ fmt.Sprintf("/game/%s/end", gameID) }
 		hx-swap="outerHTML"
 		hx-target="#form-wrapper"
+		hx-push-url="/"
 		type="submit"
 		class="btn btn-primary w-full"
 	>
