--- a/views/components/page.templ
+++ b/views/components/page.templ
@@ -6,7 +6,7 @@ templ Page(id string) {
 	@layouts.Base() {
 		<div
 			id={ id }
-			class="w-full max-w-screen-xl mx-auto text-center py-12"
+			class="w-full max-w-screen-xl h-full max-h-screen-xl mx-auto text-center py-12"
 		>
 			{ children... }
 		</div>
