page: from components -> layouts

--- a/views/home/index.templ
+++ b/views/home/index.templ
@@ -1,11 +1,12 @@
 package home
 
 import (
+	"github.com/garrettladley/the_name_game/views/layouts"
 	"github.com/garrettladley/the_name_game/views/components"
 )
 
 templ Index() {
-	@components.Page("home") {
+	@layouts.Page("home") {
 		<h1
 			class="text-4xl font-bold mb-4"
 		>
