--- a/views/game/post.templ
+++ b/views/game/post.templ
@@ -1,10 +1,13 @@
 
 package game
 
-import "github.com/garrettladley/the_name_game/views/components"
+import (
+	"github.com/garrettladley/the_name_game/views/layouts"
+	"github.com/garrettladley/the_name_game/views/components"
+)
 
 templ Post() {
-	@components.Page("home") {
+	@layouts.Page("home") {
 		<h1
 			class="text-4xl font-bold mb-4"
 		>
