--- a/views/game/post.templ
+++ b/views/game/post.templ
@@ -13,6 +13,6 @@ templ Post() {
 		>
 			Name submitted successfully!
 		</h1>
-		@components.HomeButtons("#home")
+		@components.HomeButtons("#home", "#home")
 	}
 }
