--- a/views/home/index.templ
+++ b/views/home/index.templ
@@ -12,6 +12,6 @@ templ Index() {
 		>
 			Welcome to The Name Game
 		</h1>
-		@components.HomeButtons("#home")
+		@components.HomeButtons("#home", "#home")
 	}
 }
