--- a/views/layouts/base.templ
+++ b/views/layouts/base.templ
@@ -22,7 +22,10 @@ templ Base() {
 			<meta name="msapplication-TileColor" content="#da532c"/>
 			<meta name="theme-color" content="#ffffff"/>
 		</head>
-		<body class="antialiased">
+		<body
+			id="body"
+			class="antialiased"
+		>
 			{ children... }
 		</body>
 	</html>
