--- a/views/game/post.templ
+++ b/views/game/post.templ
@@ -1,15 +1,18 @@
 
 package game
 
-import "github.com/garrettladley/the_name_game/views/components"
+import (
+	"github.com/garrettladley/the_name_game/views/layouts"
+	"github.com/garrettladley/the_name_game/views/components"
+)
 
 templ Post() {
-	@components.Page("home") {
+	@layouts.Page("home") {
 		<h1
 			class="text-4xl font-bold mb-4"
 		>
 			Name submitted successfully!
 		</h1>
-		@components.HomeButtons("#home")
+		@components.HomeButtons("#home", "#home")
 	}
 }
