--- a/views/home/index.templ
+++ b/views/home/index.templ
@@ -1,16 +1,17 @@
 package home
 
 import (
+	"github.com/garrettladley/the_name_game/views/layouts"
 	"github.com/garrettladley/the_name_game/views/components"
 )
 
 templ Index() {
-	@components.Page("home") {
+	@layouts.Page("home") {
 		<h1
 			class="text-4xl font-bold mb-4"
 		>
 			Welcome to The Name Game
 		</h1>
-		@components.HomeButtons("#home")
+		@components.HomeButtons("#home", "#home")
 	}
 }
