--- a/views/layouts/base.templ
+++ b/views/layouts/base.templ
@@ -1,7 +1,5 @@
 package layouts
 
-import ()
-
 templ Base() {
 	<!DOCTYPE html>
 	<html lang="en" data-theme="dark">
@@ -24,7 +22,7 @@ templ Base() {
 		</head>
 		<body
 			id="body"
-			class="antialiased"
+			class="antialiased h-full w-full overflow-x-hidden m-0 p-0"
 		>
 			{ children... }
 		</body>
