--- a/views/game/join.templ
+++ b/views/game/join.templ
@@ -39,9 +39,9 @@ templ JoinForm(params JoinParams, errors JoinErrors) {
 }
 
 templ Join() {
-	<div class="flex justify-center mt-[calc(100vh-100vh+8rem)]">
+	<div class="flex justify-center mt-4">
 		<div class="max-w-md w-full bg-base-300 py-12 px-8 rounded-xl">
-			<h1 class="text-center text-xl font-black mb-10">Join The Name Game</h1>
+			<h1 class="text-center text-xl font-black mb-8">Join The Name Game</h1>
 			@JoinForm(JoinParams{}, JoinErrors{})
 		</div>
 	</div>
