--- a/views/layouts/base.templ
+++ b/views/layouts/base.templ
@@ -22,7 +22,7 @@ templ Base() {
 		</head>
 		<body
 			id="body"
-			class="antialiased h-full w-full overflow-x-hidden m-0 p-0"
+			class="antialiased supports-[height:100cqh]:h-[100cqh] supports-[height:100svh]:h-[100svh] m-0 p-0"
 		>
 			{ children... }
 		</body>
