--- a/views/layouts/page.templ
+++ b/views/layouts/page.templ
@@ -4,7 +4,7 @@ templ Page(id string) {
 	@Base() {
 		<div
 			id={ id }
-			class="w-full max-w-screen-xl h-full min-h-screen mx-auto text-center py-12"
+			class="w-full mx-auto text-center py-12"
 		>
 			{ children... }
 		</div>
