--- a/views/layouts/base.templ
+++ b/views/layouts/base.templ
@@ -6,7 +6,7 @@ templ Base() {
 		<head>
 			<title>The Name Game</title>
 			<meta charset="UTF-8"/>
-			<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
+			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<link rel="stylesheet" href="/public/styles.css"/>
 			<script src="/htmx/htmx.min.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"></script>
@@ -18,11 +18,10 @@ templ Base() {
 			<meta name="apple-mobile-web-app-title" content="The Name Game"/>
 			<meta name="application-name" content="The Name Game"/>
 			<meta name="msapplication-TileColor" content="#da532c"/>
-			<meta name="theme-color" content="#ffffff"/>
 		</head>
 		<body
 			id="body"
-			class="antialiased supports-[height:100cqh]:h-[100cqh] supports-[height:100svh]:h-[100svh] h-screen w-screen overscroll-y-contain m-0 p-0"
+			class="antialiased"
 		>
 			{ children... }
 		</body>
