add back theme-color and screen

--- a/views/layouts/base.templ
+++ b/views/layouts/base.templ
@@ -18,10 +18,11 @@ templ Base() {
 			<meta name="apple-mobile-web-app-title" content="The Name Game"/>
 			<meta name="application-name" content="The Name Game"/>
 			<meta name="msapplication-TileColor" content="#da532c"/>
+			<meta name="theme-color" content="#ffffff"/>
 		</head>
 		<body
 			id="body"
-			class="antialiased"
+			class="antialiased h-screen w-screen"
 		>
 			{ children... }
 		</body>
