more style debugging

--- a/views/layouts/base.templ
+++ b/views/layouts/base.templ
@@ -22,7 +22,7 @@ templ Base() {
 		</head>
 		<body
 			id="body"
-			class="antialiased h-screen w-screen"
+			class="antialiased h-screen w-screen touch-action:none overscroll-y-none"
 		>
 			{ children... }
 		</body>
