more style debugging

--- a/views/layouts/base.templ
+++ b/views/layouts/base.templ
@@ -2,7 +2,7 @@ package layouts
 
 templ Base() {
 	<!DOCTYPE html>
-	<html lang="en" data-theme="dark">
+	<html lang="en" class="dark [--scroll-mt:9.875rem] lg:[--scroll-mt:6.3125rem] [scrollbar-gutter:stable] js-focus-visible">
 		<head>
 			<title>The Name Game</title>
 			<meta charset="UTF-8"/>
