--- a/views/layouts/base.templ
+++ b/views/layouts/base.templ
@@ -21,8 +21,7 @@ templ Base() {
 			<meta name="theme-color" content="#ffffff"/>
 		</head>
 		<body
-			id="body"
-			class="antialiased h-screen bg-base-200"
+			class="antialiased h-screen w-screen bg-white dark:bg-base-200 overflow-hidden"
 		>
 			{ children... }
 		</body>
