--- a/views/layouts/base.templ
+++ b/views/layouts/base.templ
@@ -2,11 +2,11 @@ package layouts
 
 templ Base() {
 	<!DOCTYPE html>
-	<html lang="en" class="dark [--scroll-mt:9.875rem] lg:[--scroll-mt:6.3125rem] [scrollbar-gutter:stable] js-focus-visible">
+	<html lang="en" data-theme="dark">
 		<head>
 			<title>The Name Game</title>
 			<meta charset="UTF-8"/>
-			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+			<meta name="viewport" content="height=device-height,width=device-width, initial-scale=1.0"/>
 			<link rel="stylesheet" href="/public/styles.css"/>
 			<script src="/htmx/htmx.min.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"></script>
@@ -21,7 +21,7 @@ templ Base() {
 			<meta name="theme-color" content="#ffffff"/>
 		</head>
 		<body
-			class="antialiased h-screen w-screen bg-base-200"
+			class="antialiased h-screen w-screen bg-base-200 mt-0"
 		>
 			{ children... }
 		</body>
