--- a/views/layouts/base.templ
+++ b/views/layouts/base.templ
@@ -21,7 +21,7 @@ templ Base() {
 			<meta name="theme-color" content="#ffffff"/>
 		</head>
 		<body
-			class="antialiased h-screen w-screen bg-base-200"
+			class="antialiased supports-[height:100cqh]:h-[100cqh] supports-[height:100svh]:h-[100svh] w-full bg-base-200"
 		>
 			{ children... }
 		</body>
