--- a/views/layouts/base.templ
+++ b/views/layouts/base.templ
@@ -21,7 +21,7 @@ templ Base() {
 			<meta name="theme-color" content="#ffffff"/>
 		</head>
 		<body
-			class="antialiased h-screen w-screen absolute inset-0 bg-base-200"
+			class="antialiased w-screen absolute inset-0 bg-base-200"
 		>
 			{ children... }
 		</body>
