--- a/views/layouts/base.templ
+++ b/views/layouts/base.templ
@@ -18,10 +18,10 @@ templ Base() {
 			<meta name="apple-mobile-web-app-title" content="The Name Game"/>
 			<meta name="application-name" content="The Name Game"/>
 			<meta name="msapplication-TileColor" content="#da532c"/>
-			<meta name="theme-color" content="#ffffff"/>
+			<meta name="theme-color" content="bg-base-200"/>
 		</head>
 		<body
-			class="antialiased h-screen w-screen bg-base-200 mt-0 pt-0"
+			class="antialiased h-screen w-screen bg-base-200"
 		>
 			{ children... }
 		</body>
