--- a/views/layouts/base.templ
+++ b/views/layouts/base.templ
@@ -18,8 +18,7 @@ templ Base() {
 			<meta name="apple-mobile-web-app-title" content="The Name Game"/>
 			<meta name="application-name" content="The Name Game"/>
 			<meta name="msapplication-TileColor" content="#da532c"/>
-			<meta name="theme-color" content="#ffffff"/>
-			<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
+			<meta name="theme-color" content="#191e24"/>
 		</head>
 		<body
 			class="antialiased h-screen w-screen bg-base-200"
