--- a/views/game/game.templ
+++ b/views/game/game.templ
@@ -64,10 +64,10 @@ templ SubmitSuccess(gameID domain.ID) {
 }
 
 templ Index(gameID domain.ID, isHost bool) {
-	<div class="flex justify-center mt-4">
+	<div class="flex justify-center">
 		<div
 			id="form-wrapper"
-			class="max-w-md w-full bg-base-200 py-12 px-8 rounded-xl"
+			class="max-w-md w-full py-12 px-8 rounded-xl"
 		>
 			<h1 class="text-center text-xl font-black mb-8">Submit a name to The Name Game</h1>
 			<h2 class="text-center text-lg font-black mb-4">Game Code: { gameID.String() }</h2>
