--- a/views/game/name_info.templ
+++ b/views/game/name_info.templ
@@ -3,7 +3,7 @@ package game
 templ NameInfo(name string, to string) {
 	<div
 		id="name_info_container"
-		class="flex flex-col items-center justify-center max-w-md w-full bg-base-200 py-12 px-8 space-y-4 rounded-xl"
+		class="flex flex-col items-center justify-center max-w-md w-full py-12 px-8 space-y-4 rounded-xl"
 	>
 		<h1
 			class="text-2xl font-bold text-center"
