--- a/views/game/join_qr.templ
+++ b/views/game/join_qr.templ
@@ -2,7 +2,7 @@ package game
 
 import "fmt"
 
-templ JoinGameQr(qr string) {
+templ JoinGameQR(qr string) {
 	<div
 		class="flex flex-col items-center space-y-4"
 	>
