--- a/views/layouts/base.templ
+++ b/views/layouts/base.templ
@@ -1,5 +1,9 @@
 package layouts
 
+import (
+	"github.com/garrettladley/the_name_game/internal/server/middleware"
+)
+
 templ Base() {
 	<!DOCTYPE html>
 	<html lang="en" data-theme="dark">
@@ -18,6 +22,24 @@ templ Base() {
 			<meta name="application-name" content="The Name Game"/>
 			<meta name="msapplication-TileColor" content="#da532c"/>
 			<meta name="theme-color" content="#191e24"/>
+			<meta property="og:type" content="website"/>
+			<meta property="og:title" content="The Name Game"/>
+			<meta property="og:description" content="Play The Name Game with your friends!"/>
+			<meta property="og:image" content="/apple-touch-icon.png"/>
+			<meta property="og:url" content={ GetOriginalURL(ctx) }/>
+			<meta property="og:site_name" content="The Name Game"/>
+			<meta name="twitter:card" content="summary_large_image"/>
+			<meta name="twitter:title" content="The Name Game"/>
+			<meta name="twitter:description" content="Play The Name Game with your friends!"/>
+			<meta name="twitter:image" content="/apple-touch-icon.png"/>
+			<meta name="twitter:site" content="@GarrettLadley"/>
+			<meta property="og:image" content="/apple-touch-icon.png"/>
+			<meta property="og:image:width" content="120"/>
+			<meta property="og:image:height" content="120"/>
+			<meta property="og:title" content="The Name Game"/>
+			<meta property="og:description" content="Play The Name Game with your friends!"/>
+			<meta property="og:image" content="/apple-touch-icon.png"/>
+			<meta property="og:url" content={ GetOriginalURL(ctx) }/>
 		</head>
 		<body
 			class="antialiased h-screen w-full bg-base-200"
@@ -25,4 +47,11 @@ templ Base() {
 			{ children... }
 		</body>
 	</html>
+}
+
+func GetOriginalURL(ctx context.Context) string {
+	if originalURL, ok := ctx.Value(middleware.OriginalURLKey).(string); ok {
+		return originalURL
+	}
+	return ""
 }
