--- a/views/game/join_qr.templ
+++ b/views/game/join_qr.templ
@@ -19,7 +19,9 @@ templ JoinGameQR(qr string) {
 					this.setAttribute('data-visible', 'true');
 				}"
 			class="btn btn-secondary w-full"
-		>Hide</button>
+		>
+			Hide
+		</button>
 		<div
 			id="qr"
 		>
