--- a/views/game/game.templ
+++ b/views/game/game.templ
@@ -1,6 +1,7 @@
 package game
 
 import (
+	"context"
 	"fmt"
 	"github.com/garrettladley/the_name_game/internal/domain"
 	"github.com/garrettladley/the_name_game/views/layouts"
